--- a/public/lobby/styles/style.css
+++ b/public/lobby/styles/style.css
@@ -20,3 +20,10 @@
     background-color: #4CAF50;
     color: white;
   }
+
+  #pad_block{
+    margin-left: auto;
+    margin-right: auto;
+    width: 6em;
+    margin-top: 100px;
+  }
